# taskmaster

./: Cargo.toml  README.md
.github/workflows/: main.yml  rust.yml
client/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
server/src/config_reader/: integration_test.rs  mod.rs  tests.rs
server/src/config_reader/test_data/: bad_config.yaml  super_highload_task.sh  test.yaml
server/src/task_mangment/: mod.rs
server/tests/: mod.rs
