[package]
name = "server"
version = "0.1.0"
authors = ["0xd34b33f <0xd34b33f@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.15.0"
yaml-rust = "0.4"
signal = "0.7.0"
linked-hash-map = "0.5.2"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4"
clap = "2.33.0"
umask = "0.1"
tokio = "0.2.0-alpha.2"
tokio-process = "0.3.0-alpha.2"
futures = "0.3.0"